fixed text color contrast in a few more places:
- homepage sub-head text on first slide
- buttons on homepage
- headings on other pages

--- a/app/src/scss/_buttons.scss
+++ b/app/src/scss/_buttons.scss
@@ -39,7 +39,7 @@
 
   @include responsive(small-screens) {
     width: 110px;
-    font-size: 1.3em;
+    font-size: 1.9em;
     padding: 8px 12px;
 
     &.search {
@@ -141,7 +141,7 @@
       bottom: 5%;
 
       .button-text {
-        font-size: 1.6em;
+        font-size: 2em;
       }
 
       .arrow {
