--- a/app/src/scss/_other_pages_main_content.scss
+++ b/app/src/scss/_other_pages_main_content.scss
@@ -20,7 +20,7 @@ body {
 
   h2 {
     margin-top: 50px;
-    color: $orange;
+    color: $darkorange;
 
     &:first-child {
       margin-top: 25px;
